--- a/balanco/templates/balanco/balanco.html
+++ b/balanco/templates/balanco/balanco.html
@@ -6,36 +6,13 @@
 <body>
     <h1>Balanço Patrimonial</h1>
 
-    <h2>Ativos</h2>
-    <ul>
-        {% for ativo in ativos %}
-            <li>{{ ativo.nome }}: ${{ ativo.valor }}</li>
-        {% endfor %}
-    </ul>
-
-    <h2>Passivos</h2>
-    <ul>
-        {% for passivo in passivos %}
-            <li>{{ passivo.nome }}: ${{ passivo.valor }}</li>
-        {% endfor %}
-    </ul>
-
     <h2>Total Ativos: ${{ total_ativos }}</h2>
     <h2>Total Passivos: ${{ total_passivos }}</h2>
     <h2>Patrimônio Líquido: ${{ patrimonio_liquido }}</h2>
 
-    <h2>Adicionar Ativo</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ ativo_form.as_p }}
-        <button type="submit">Adicionar Ativo</button>
-    </form>
-
-    <h2>Adicionar Passivo</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ passivo_form.as_p }}
-        <button type="submit">Adicionar Passivo</button>
-    </form>
+    <a href="{% url 'ativos_listagem' %}">Visualizar Todos Ativos</a>
+    <a href="{% url 'passivos_listagem' %}">Visualizar Todos Passivos</a>
+    <a href="{% url 'adicionar_ativo' %}">Adicionar Ativo</a>
+    <a href="{% url 'adicionar_passivo' %}">Adicionar Passivo</a>
 </body>
 </html>
