--- a/balanco/templates/balanco/editar_ativo.html
+++ b/balanco/templates/balanco/editar_ativo.html
@@ -1,7 +1,9 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
     <title>Editar Ativo</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <h1>Editar Ativo</h1>
