--- a/balanco/templates/balanco/apagar_ativo.html
+++ b/balanco/templates/balanco/apagar_ativo.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>Apagar Ativo</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/styleApagar.css' %}">
 </head>
 <body>
     <h1>Apagar Ativo</h1>
