--- a/balanco/templates/balanco/apagar_passivo.html
+++ b/balanco/templates/balanco/apagar_passivo.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <title>Apagar Passivo</title>
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/styleApagar.css' %}">
 </head>
 <body>
     <h1>Apagar Passivo</h1>
