--- a/balanco/static/css/styleAddActivo.css
+++ b/balanco/static/css/styleAddActivo.css
@@ -41,3 +41,86 @@ body {
     color: #007bff;
     margin-top: 10px;
 }
+.botoes{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.voltar{
+    background: #007bff;
+    padding: 16px;
+    border-radius: 7px;
+    font-size: 16px;
+    font-weight: bold;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+    margin-top: 10px;
+}
+.button{
+    background: #007bff;
+    padding: 16px;
+    border-radius: 7px;
+    font-size: 16px;
+    font-weight: bold;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+    margin-top: 10px;
+    border: none;
+}
+
+.voltar:hover {
+    background-color: #0056b3;
+}
+.button:hover {
+    background-color: #0056b3;  
+}
+#id_nome{
+    padding: 10px;
+    width: 70%;
+    height: 20px;
+    border-end-end-radius: 7px;
+    border-top-right-radius: 7px;
+    font-family: 'Times New Roman', Times, serif ;
+    font-weight: bold;
+    font-size: 17px;
+    border-color: #007bff;
+}
+#id_nome:hover{
+    border-color: green;   
+}
+#id_valor:hover{
+    
+    border-color: green;
+}
+#id_valor{
+    padding: 10px;
+    width: 70%;
+    height: 20px;
+    border-end-end-radius: 7px;
+    border-top-right-radius: 7px;
+    font-family: 'Times New Roman', Times, serif ;
+    font-weight: bold;
+    border-color: #007bff;
+    
+}
+.butt{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+label{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 17px;
+    font-weight: bold;
+    color: rgb(43, 43, 43);
+    font-weight: bold;
+    
+}
+h1{
+    text-align: center ;
+    color: green;
+}
