--- a/balanco/templates/balanco/balanco_patrimonial.html
+++ b/balanco/templates/balanco/balanco_patrimonial.html
@@ -12,11 +12,12 @@
         <h2 class="section-title">Total Ativos: {{ total_ativos }} MT</h2>
         <h2 class="section-title">Total Passivos: {{ total_passivos }} MT</h2>
         <h2 class="section-title">Patrimônio Líquido: {{ patrimonio_liquido }} MT</h2>
-
+    <div class="botoes">
         <a href="{% url 'ativos_listagem' %}" class="link">Visualizar Todos Ativos</a>
         <a href="{% url 'passivos_listagem' %}" class="link">Visualizar Todos Passivos</a>
         <a href="{% url 'adicionar_ativo' %}" class="link">Adicionar Ativo</a>
         <a href="{% url 'adicionar_passivo' %}" class="link">Adicionar Passivo</a>
+    </div>
     </div>
 </body>
 </html>
