--- a/balanco/templates/balanco/editar_passivo.html
+++ b/balanco/templates/balanco/editar_passivo.html
@@ -1,17 +1,22 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
 <head>
     <title>Editar Passivo</title>
+    <link rel="stylesheet" href="{% static 'css/styleAddActivo.css' %}">
 </head>
 <body>
+    <div class="container">
     <h1>Editar Passivo</h1>
 
     <form method="post">
         {% csrf_token %}
         {{ passivo_form.as_p }}
-        <button type="submit">Salvar Alterações</button>
+        <div class="butt">
+        <button class="button" type="submit">Salvar Alterações</button>
+        <a class="button" href="{% url 'passivos_listagem' %}">Voltar à Lista de Passivos</a>
     </form>
-
-    <a href="{% url 'passivos_listagem' %}">Voltar à Lista de Passivos</a>
+</div>
+</div>
 </body>
 </html>
